--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
                 <h3 id="w-string"></h3>
                 <img id="w-icon">
                 <ul id="w-details" class="list-group mt-3">
-                    <li class="list-group-item" id="w-humidity"></li>
-                    <li class="list-group-item" id="w-dewpoint"></li>
                     <li class="list-group-item" id="w-feels-like"></li>
+                    <li class="list-group-item" id="w-min-temp"></li>
+                    <li class="list-group-item" id="w-max-temp"></li>
+                    <li class="list-group-item" id="w-humidity"></li>
                     <li class="list-group-item" id="w-wind"></li>
                 </ul>
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#localModal"> 
+                <button type="button" class="btn btn-primary mt-3" data-toggle="modal" data-target="#localModal"> 
                     Change Location
                 </button>
             </div>
@@ -45,8 +46,8 @@
                     <input type="text" id="city" class="form-control">
                 </div>
                 <div class="form-group">
-                    <label for="state">State</label>
-                    <input type="text" id="state" class="form-control">
+                    <label for="state">Contry</label>
+                    <input type="text" id="country" class="form-control">
                 </div>
             </form>
 
