--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <li class="list-group-item" id="w-humidity"></li>
                     <li class="list-group-item" id="w-wind"></li>
                 </ul>
-                <button type="button" class="btn btn-primary mt-3" data-toggle="modal" data-target="#localModal"> 
+                <button type="button" class="btn btn-secondary mt-3" data-toggle="modal" data-target="#localModal"> 
                     Change Location
                 </button>
             </div>
